# Rusticulum

./: .gitignore  Cargo.toml  Cargo_MacBook-Air-6.lan_Feb-14-145715-2026_Conflict.toml  README.md
src/: announce_log.rs  buffer.rs  cffi.rs  channel.rs  client.rs  config.rs  destination.rs  destination_MacBook-Air-6.lan_Feb-14-150007-2026_Conflict.rs  discovery.rs  ffi.rs  identity.rs  identity.rs.bak  identity_MacBook-Air-6.lan_Feb-14-150007-2026_Conflict.rs  lib.rs  link.rs  link_MacBook-Air-6.lan_Feb-14-150007-2026_Conflict.rs  lxstamper.rs  packet.rs  resolver.rs  resource.rs  reticulum.rs  transport.rs  transport_MacBook-Air-6.lan_Feb-14-150007-2026_Conflict.rs  version.rs
src/interfaces/: auto_interface.rs  backbone_interface.rs  interface.rs  kiss_interface.rs  local_interface.rs  mod.rs  pipe_interface.rs  rnode_interface.rs  serial_interface.rs  tcp_interface.rs  udp_interface.rs
src/interfaces/i2p/: interface.rs  mod.rs  peer.rs  sam.rs
tests/: python_oracle.rs
