[package]
name = "reticulum_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rnsd"
path = "src/bin/rnsd.rs"

[features]
default = ["serial"]
serial = ["dep:serialport", "dep:btleplug", "dep:uuid", "dep:futures"]

[dependencies]
chrono = "0.4"
ctrlc = "3.4"
once_cell = "1.19"
rand = "0.8"
bzip2 = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp = "=0.8.14"
rmpv = "=1.0.0"
rmp-serde = "=1.1.2"
serde_bytes = "0.11"
x25519-dalek = { version = "=1.1.1" }
ed25519-dalek = { version = "=1.0.1", features = ["rand"] }
hkdf = "=0.12.3"
aes = "=0.8.3"
cbc = "=0.1.2"
hmac = "=0.12.1"
block-padding = "=0.3.3"
libc = "0.2"
socket2 = "0.5"
if-addrs = "0.10"
windows-sys = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation"] }
serialport = { version = "4.3", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
btleplug = { version = "0.11", optional = true }
uuid = { version = "1.7", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
data-encoding = "2.5"
serde_json = "1.0"
